Z-index correction in passions view

--- a/assets/css/xebia.less
+++ b/assets/css/xebia.less
@@ -440,21 +440,21 @@ body{
 .parallax-layer {
 	position: absolute;
 }
-#slides {
+#blackboard-slides {
 	width: 820px;
 	height: 463px;
 	margin: 0 auto;
 }
-#slides .pagination {
+#blackboard-slides .pagination {
 	margin: 10px auto 0;
 	width: 100px;
 }
-#slides .pagination li {
+#blackboard-slides .pagination li {
 	float: left;
 	margin: 0 1px;
 	list-style: none;
 }
-#slides .pagination li a {
+#blackboard-slides .pagination li a {
 	display: block;
 	width: 12px;
 	height: 0;
@@ -464,16 +464,19 @@ body{
 	float: left;
 	overflow: hidden;
 }
-#slides .pagination li.current a {
+#blackboard-slides .pagination li.current a {
 	background-position: 0 -12px;
 }
-#slides .prev {
+#blackboard-slides .prev {
 	position: absolute;
 	margin-top: 200px;
 	margin-left: -34px;
 }
-#slides .next {
+#blackboard-slides .next {
 	position: absolute;
 	margin-top: 200px;
 	margin-left: 830px;
+}
+.content {
+	z-index: 100;
 }
